fix overflow causing mobile devices to scroll right

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     /* background-color: #D96E30; */
     background-color: #e7e7e7;
     /* background-color: #aabbb5; */
